# TemplateMethodDesignPattern

./: CMakeLists.txt  README.md  VideoLoader.cpp  VideoLoader.h  main.cpp  run.sh
videodownloader/: TikTokDownloader.cpp  TikTokDownloader.h  VideoDownloader.cpp  VideoDownloader.h  VimeoDownloader.cpp  VimeoDownloader.h  YouTubeDownloader.cpp  YouTubeDownloader.h
